--- a/html/main.html
+++ b/html/main.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<div class="container-fluid" style="background-color: #d6d6c2;color:#fff;height:200px;">
-	  <h1>IoT Manager</h1>
-	  <h3>... schaltet alles ein und/ oder aus!</h3>
-	  
-	 </div>
+	
 
   <title>Bootstrap Example</title>
   <meta charset="utf-8">
@@ -13,8 +9,8 @@
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  
-  <style>
+  <link rel="stylesheet" href="style.css">
+<style>
   /* Note: Try to remove the following lines to see the effect of CSS positioning */
   .affix {
       top: 0;
@@ -22,15 +18,19 @@
   }
 
   .affix + .container-fluid {
-      padding-top: 100px;
+      padding-top: 70px;
   }
   </style>
   
   
 </head>
 <body>
-
-<nav class="navbar navbar-inverse">
+<div class="container-fluid" style="background-color: #d6d6c2;color:#000000;height:200px;">
+	  <h1>IoT Manager</h1>
+	  <h3>... schaltet alles ein und/ oder aus!</h3>
+	  
+	 </div>
+<nav class="navbar navbar-inverse" data-spy="affix" data-offset-top="197" id="nav">
   <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -61,36 +61,51 @@
   </div>
 </nav>
   
-<div class="container">
-  <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Open Small Modal</button>
-
-  <!-- Modal -->
-  <div class="modal fade" id="myModal" role="dialog">
-    <div class="modal-dialog modal-sm">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">Modal Header</h4>
-        </div>
-        <div class="modal-body">
-          <p>This is a small modal.</p>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        </div>
-      </div>
-    </div>
+<div class="container wrapper">
+  <div class="row">
+	<div class="col-sm-1"></div>
+		<div class="col-sm-10">
+			<div class="col-sm-4">
+				<h1>Teil 1</h1>
+				<h1>Teil 1</h1>
+				<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
+				sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
+				sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
+				Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+				Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+				tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et 
+				accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
+				no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+				<h1>Teil 1</h1>
+				<h1>Teil 1</h1>
+				<h1>Teil 1</h1>
+				<h1>Teil 1</h1>
+				<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
+				sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
+				sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
+				Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+				Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+				tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et 
+				accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
+				no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+				<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
+				sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
+				sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
+				Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+				Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+				tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et 
+				accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
+				no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+			</div>
+			<div class="col-sm-4">
+				<h1>Teil 2</h1>
+			</div>
+			<div class="col-sm-4">
+				<h1>Teil 3</h1>
+			</div>
+		</div>
+	<div class="col-sm-1"></div>
   </div>
-  http://getbootstrap.com/examples/signin/
-  <h1>ds</h1>
-  <h1>ds</h1>
-  <h1>ds</h1>
-  <h1>ds</h1>
-  <h1>ds</h1>
-  <h1>ds</h1>
-  <h1>ds</h1><h1>ds</h1><h1>ds</h1><h1>ds</h1>
-  <h1>ds</h1>
-  
 </div>
 
 
