--- a/html/main.html
+++ b/html/main.html
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-<div class="container-fluid" style="background-color: #d6d6c2;color:#000000;height:200px;">
+<div class="container-fluid test2" >
 	  <h1>IoT Manager</h1>
 	  <h3>... schaltet alles ein und/ oder aus!</h3>
 	  
@@ -44,16 +44,15 @@
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Home</a></li>
         <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1 <span class="caret"></span></a>
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Geräte<span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="#">Page 1-1</a></li>
             <li><a href="#">Page 1-2</a></li>
             <li><a href="#">Page 1-3</a></li>
           </ul>
         </li>
-        <li><a href="#">Page 2</a></li>
-        <li><a href="#">Page 3</a></li>
-      </ul>
+        <li><a href="#">Aktivitäten</a></li>
+       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
       </ul>
@@ -61,12 +60,12 @@
   </div>
 </nav>
   
-<div class="container wrapper">
+<div class="container wrapper test" >
   <div class="row">
 	<div class="col-sm-1"></div>
 		<div class="col-sm-10">
 			<div class="col-sm-4">
-				<h1>Teil 1</h1>
+				<h1>Spalte 1</h1>
 				<h1>Teil 1</h1>
 				<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
 				sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
@@ -98,10 +97,10 @@
 				no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
 			</div>
 			<div class="col-sm-4">
-				<h1>Teil 2</h1>
+				<h1>Spalte 2</h1>
 			</div>
 			<div class="col-sm-4">
-				<h1>Teil 3</h1>
+				<h1>Spalte 3</h1>
 			</div>
 		</div>
 	<div class="col-sm-1"></div>
