--- a/html/main.html
+++ b/html/main.html
@@ -3,12 +3,17 @@
 <head>
 	
 
-  <title>Bootstrap Example</title>
+  <title>Iot Manager</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <script type="text/javascript">
+		function sayHello(){
+			alert("Hallo!");
+		}
+	</script>
   <link rel="stylesheet" href="style.css">
 <style>
   /* Note: Try to remove the following lines to see the effect of CSS positioning */
@@ -105,6 +110,9 @@
 		</div>
 	<div class="col-sm-1"></div>
   </div>
+  <button type="button" class="fixedbutton" onclick="sayHello()">
+  <span class="glyphicon glyphicon-plus" ></span>
+</button>
 </div>
 
 
@@ -112,5 +120,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     
     <script src="js/bootstrap.min.js"></script>
+	
   </body>
 </html>
