Gerät-anlegen-Btn richtig positioniert

--- a/html/main.html
+++ b/html/main.html
@@ -107,12 +107,13 @@
 			<div class="col-sm-4">
 				<h1>Spalte 3</h1>
 			</div>
+			  <button type="button" class="fixedbutton btn btn-primary" onclick="sayHello()">
+  <span class="glyphicon glyphicon-plus" ></span>
+</button>
 		</div>
 	<div class="col-sm-1"></div>
   </div>
-  <button type="button" class="fixedbutton" onclick="sayHello()">
-  <span class="glyphicon glyphicon-plus" ></span>
-</button>
+
 </div>
 
 
