--- a/html/register.html
+++ b/html/register.html
@@ -10,15 +10,23 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <script type="text/javascript">
-		function onLogin(){
+		function onRegister(){
 			var user = document.getElementById('user').value;
 			var pw = document.getElementById('pw').value;
-			alert('Dein Username ist "' + user + '" und dein Passwort lautet: "' + pw+'"');
-			window.location='main.html';
+			var pw2 = document.getElementById('pw2').value;
+			if(pw === pw2){
+				alert('Dein Username ist "' + user + '" und dein Passwort lautet: "' + pw+'"');
+				window.location='main.html';
+			}
+			else{
+				alert('Passwörter stimmen nicht überein!');
+			}
+			
 		}
 		
-		function onAccount(){
-			window.location='register.html';
+		function onLogin(){
+			window.location='login.html';
+			
 		}
 	</script>
   <link rel="stylesheet" href="style.css">
@@ -56,20 +64,21 @@
   <div class="row">
 	<div class="col-sm-4"></div>
    <div class="col-sm-4 " >
-   <form id="form">
+   <form id="formRegister">
 	<div class="panel panel-primary login">
 	<div class="panel-heading">
-				<h1>Login</h1>
+				<h1>Registrieren</h1>
 	</div>
 	<div class="panel-body">
     <p class="eingaben">Username:</p><input type="text" id="user" value="Benutzername" >
 	<p class="eingaben">Passwort:</p><input type="password" id="pw" value="Passwort" >
+	<p class="eingaben">Passwort:</p><input type="password" id="pw2" value="Passwort" >
   </div>
   <div class="panel-footer">
  
-	<button class="btn btn-primary" type="button" id="login" onclick="onLogin()">Login</button>
+	<button class="btn btn-primary" type="button" id="register" onclick="onRegister()">Registrieren</button>
  
-	<button class="btn btn-info pull-right" type="button" id="account" onclick="onAccount()">Neuer Account</button>
+	<button class="btn btn-info pull-right" type="button" id="login" onclick="onLogin()">Zum Login</button>
   </form>
   </div>
   
