--- a/html/register.html
+++ b/html/register.html
@@ -70,9 +70,9 @@
 				<h1>Registrieren</h1>
 	</div>
 	<div class="panel-body">
-    <p class="eingaben">Username:</p><input type="text" id="user" value="Benutzername" >
-	<p class="eingaben">Passwort:</p><input type="password" id="pw" value="Passwort" >
-	<p class="eingaben">Passwort:</p><input type="password" id="pw2" value="Passwort" >
+    <p class="eingaben">Username:</p><input type="text" id="user" placeholder="Benutzername" >
+	<p class="eingaben">Passwort:</p><input type="password" id="pw" placeholder="Passwort" >
+	<p class="eingaben">Passwort:</p><input type="password" id="pw2" placeholder="Passwort" >
   </div>
   <div class="panel-footer">
  
