--- a/html/login.html
+++ b/html/login.html
@@ -62,8 +62,8 @@
 				<h1>Login</h1>
 	</div>
 	<div class="panel-body">
-    <p class="eingaben">Username:</p><input type="text" id="user" value="Benutzername" >
-	<p class="eingaben">Passwort:</p><input type="password" id="pw" value="Passwort" >
+    <p class="eingaben">Username:</p><input type="text" id="user" placeholder="Benutzername" >
+	<p class="eingaben">Passwort:</p><input type="password" id="pw" placeholder="Passwort" >
   </div>
   <div class="panel-footer">
  
